<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@drawable/rounded_border"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
	    android:id="@+id/about_app_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/about_app_name"
        android:textColor="@color/white" />
    
    <TextView
	    android:id="@+id/about_app_version"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/about_app_version_string"
        android:textColor="@color/white" />
    
    <TextView
	    android:id="@+id/about_developer"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/about_developer"
        android:textColor="@color/white" />

    <TextView
	    android:id="@+id/about_website"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/about_website"
        android:textColor="@color/white" />

</LinearLayout>