<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfigActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/minimalWindLabel"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:paddingTop="15dp"
        android:layout_alignParentTop="true"
        android:text="@string/settings_minimal_wind"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/optimalWindLabel"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:paddingTop="15dp"
        android:layout_below="@+id/minimalWindLabel"
        android:text="@string/settings_optimal_wind"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/muchWindLabel"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:paddingTop="15dp"
        android:layout_below="@+id/optimalWindLabel"
        android:text="@string/settings_much_wind"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/toomuchWindLabel"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:paddingTop="15dp"
        android:layout_below="@+id/muchWindLabel"
        android:text="@string/settings_toomuch_wind"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/widgetSelectSpotLabel"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/toomuchWindLabel"
        android:text="@string/settings_select_spot"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/widgetSelectDefaultSpotLabel"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/widgetSelectSpotLabel"
        android:text="@string/settings_select_default_spot"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    
    <EditText
        android:id="@+id/minimalWindEditText"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:layout_height="30dp"
        android:layout_toRightOf="@+id/minimalWindLabel"
        android:layout_alignParentTop="true"
        android:background="@color/light_gray"
        android:inputType="numberDecimal"
        android:ems="10" />

    <EditText
        android:id="@+id/optimalWindEditText"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:layout_height="30dp"
        android:layout_below="@+id/minimalWindEditText"
        android:layout_toRightOf="@+id/optimalWindLabel"
        android:background="@color/light_gray"
        android:inputType="numberDecimal"
        android:ems="10" />

    <EditText
        android:id="@+id/muchWindEditText"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:layout_height="30dp"
        android:layout_below="@+id/optimalWindEditText"
        android:layout_toRightOf="@+id/muchWindLabel"
        android:background="@color/light_gray"
        android:inputType="numberDecimal"
        android:ems="10" />

    <EditText
        android:id="@+id/toomuchWindEditText"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:layout_height="30dp"
        android:layout_below="@+id/muchWindEditText"
        android:layout_toRightOf="@+id/toomuchWindLabel"
        android:background="@color/light_gray"
        android:inputType="numberDecimal"
        android:ems="10" />

    <Spinner
        android:id="@+id/spotSpinner"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/widgetSelectSpotLabel"
        android:layout_below="@+id/toomuchWindEditText"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />
    <requestFocus />

    <Spinner
        android:id="@+id/defaultSpotSpinner"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/widgetSelectDefaultSpotLabel"
        android:layout_below="@+id/spotSpinner"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />
    <requestFocus />
    
</RelativeLayout>